--- a/recources/style.css
+++ b/recources/style.css
@@ -32,7 +32,7 @@ body {margin: 0; padding: 0; background-color: var(--bodyBg); width: 100%; heigh
     --jumbotronBg: #333333;
     --button: white;
     --buttonBg: #333333;
-    --ulTopNav: #cccccc;
+    --ulTopNav: #333333;
     --ulTopNavLiBg: crimson;
     --ulTopNavLiA: black;
     --ulFooterBorderTop: #333333;
