--- a/recources/style.css
+++ b/recources/style.css
@@ -132,7 +132,7 @@ button {background-color: var(--buttonBg); color: var(--button); outline: none; 
 .switch { position: relative; display: inline-block; width: 75px; height: 34px;}
 .switch input {opacity: 0; width: 0; height: 0;}
 .slider {position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: white; border-radius: 34px; transform: translateY(20%);}
-.slider::before {position: absolute; content: ""; height: 26px; width: 26px; left: 4px; bottom: 4px; background-color: black; border-radius: 50%; transition: 1s;}
+.slider::before {position: absolute; content: ""; height: 26px; width: 26px; left: 4px; bottom: 4px; background-color: black; border-radius: 50%;}
 input:checked + .slider {background-color: black;}
 input:checked + .slider::before {background-color: white; transform: translateX(40px);}
 
