--- a/recources/style.css
+++ b/recources/style.css
@@ -86,9 +86,7 @@ body {margin: 0; padding: 0; background-color: var(--bodyBg); width: 100%; heigh
 /**/
 p, a {font-size: 25px;}
 p {color: var(--p);}
-a {text-decoration: none !important; color: var(--a);}
-a:visited {text-decoration: underline;}
-a:active {text-decoration: underline;}
+a {text-decoration: none !important; color: var(--a); font-weight: bold;}
 
 h1, h2, h3, h4, h5, h6 {color: var(--h); border-bottom: 1px solid var(--hBorderBottom); font-size: 35px;}
 
