--- a/recources/style.css
+++ b/recources/style.css
@@ -54,35 +54,6 @@ body {margin: 0; padding: 0; background-color: var(--bodyBg); width: 100%; heigh
     --ulTopNavLiBg: #b01030;
 }
 
-#loadingScreen {
-     transition: 0s;
-     position: fixed;
-     top: 0;
-     bottom: 0;
-     right: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     background-color: var(--loadingScreenBg);
-     box-sizing: content-box;
-     z-index: 1;
-}
-#loader {
-     position: absolute;
-     top: 0;
-     bottom: 0;
-     left: 0;
-     right: 0;
-     border: 30px solid var(--loader);
-     border-radius: 50%;
-     animation: spin 1s linear infinite;
-     border-top: 30px solid var(--loaderTop);
-     width: 150px;
-     height: 150px;
-     transition: 0s;
-     margin: auto;
-}
-
 /**/
 p, a {font-size: 25px;}
 p {color: var(--p);}
@@ -90,8 +61,9 @@ a {text-decoration: none !important; color: var(--a); font-weight: bold;}
 
 h1, h2, h3, h4, h5, h6 {color: var(--h); border-bottom: 1px solid var(--hBorderBottom); font-size: 35px;}
 
-li {list-style-type: none; padding-left: 10px; font-size: 15px;}
 ul {font-size: 50px;}
+li {list-style-type: none; font-size: 15px;}
+li::before {content: "/2022"; font-weight: bold; display: inline-block;}
 
 .jumbotron {background-color: var(--jumbotronBg);}
 .jumbotron > * {padding: 10px;}
@@ -147,9 +119,4 @@ ul.footer {
     display: inline-block;
     margin: 10px;
     text-align: center;
-}
-
-@keyframes spin {
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
 }
