--- a/recources/style.css
+++ b/recources/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
-* {box-sizing: border-box; margin: 0; padding: 0;}
-body {margin: 0; padding: 0; background-color: var(--bodyBg); width: 100%; height: 100%; font-family: 'montserrat';}
+* {box-sizing: border-box; margin: 0px; padding: 0px;}
+body {margin: 0px; padding: 0px; background-color: var(--bodyBg); width: 100%; height: 100%; font-family: 'montserrat';}
 .pageContent {padding: 15px;}
 
 * {
@@ -65,19 +65,24 @@ ul {font-size: 50px;}
 li {list-style-type: none; font-size: 15px;}
 li::before {content: "\2022"; font-weight: bold; display: inline-block;}
 
+iframe {frameBorder: 0px;}
+
 .jumbotron {background-color: var(--jumbotronBg);}
 .jumbotron > * {padding: 10px;}
 
-button {background-color: var(--buttonBg); color: var(--button); outline: none; border: none; margin: 0px; padding: 10px; border-radius: 5px; font-size: 150%; font-family: 'courier new';}
+button {
+    background-color: var(--buttonBg); color: var(--button); outline: none; border: none; margin: 0px; padding: 10px; border-radius: 5px;
+    font-size: 150%; font-family: 'courier new';
+}
 /**/
 
 .topNav {
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
     background-color: var(--ulTopNav);
     display: inline-block;
     position: sticky;
-    top: 0;
+    top: 0px;
     width: 100%;
     box-sizing: content-box;
     list-style-type: none;
@@ -87,8 +92,8 @@ button {background-color: var(--buttonBg); color: var(--button); outline: none; 
 .topNav li a {color: var(--ulTopNavLiA); padding: 14px; font-size: 175%; display: block; text-decoration: none !important; text-align: center;}
 
 .switch {position: relative; display: inline-block; width: 75px; height: 34px;}
-.switch input {opacity: 0; width: 0; height: 0;}
-.slider {position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: white; border-radius: 34px; transform: translateY(20%);}
+.switch input {opacity: 0; width: 0px; height: 0px;}
+.slider {position: absolute; cursor: pointer; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: white; border-radius: 34px; transform: translateY(20%);}
 .slider::before {position: absolute; content: ""; height: 26px; width: 26px; left: 4px; bottom: 4px; background-color: black; border-radius: 50%;}
 input:checked + .slider {background-color: black;}
 input:checked + .slider::before {background-color: white; transform: translateX(40px);}
