--- a/recources/style.css
+++ b/recources/style.css
@@ -65,7 +65,7 @@ ul {font-size: 50px;}
 li {list-style-type: none; font-size: 15px;}
 li::before {content: "\2022"; font-weight: bold; display: inline-block;}
 
-iframe {frameBorder: 0px;}
+iframe {border: 0px;}
 
 .jumbotron {background-color: var(--jumbotronBg);}
 .jumbotron > * {padding: 10px;}
