--- a/recources/style.css
+++ b/recources/style.css
@@ -22,6 +22,7 @@ body {margin: 0px; padding: 0px; background-color: var(--bodyBg); width: 100%; h
     --loadingScreenBg: white;
     --loader: #cccccc;
     --loaderTop: dodgerblue;
+    --ulDot: dodgerblue;
 }
 *:hover {
     --a: #0074e4;
@@ -46,6 +47,7 @@ body {margin: 0px; padding: 0px; background-color: var(--bodyBg); width: 100%; h
     --loadingScreenBg: black;
     --loader: #333333;
     --loaderTop: crimson;
+    --ulDot: crimson;
 }
 *.darkMode:hover {
     --a: #b01030;
@@ -55,15 +57,15 @@ body {margin: 0px; padding: 0px; background-color: var(--bodyBg); width: 100%; h
 }
 
 /**/
-p, a {font-size: 25px;}
-p {color: var(--p);}
+p, a, li {font-size: 25px;}
+p, li {color: var(--p);}
 a {text-decoration: none !important; color: var(--a); font-weight: bold;}
 
-h1, h2, h3, h4, h5, h6 {color: var(--h); border-bottom: 1px solid var(--hBorderBottom); font-size: 35px;}
+h1, h2, h3, h4, h5, h6 {padding: 10px; margin-bottom: 10px; color: var(--h); border-bottom: 1px solid var(--hBorderBottom); font-size: 35px;}
 
 ul {font-size: 50px;}
-li {list-style-type: none; font-size: 15px;}
-li::before {content: "\2022"; font-weight: bold; display: inline-block;}
+ul li {list-style: none;}
+ul li::before {content: "\2022"; display: inline-block; color: var(--ulDot); padding: 5px;}
 
 iframe {border: 0px;}
 
@@ -71,9 +73,21 @@ iframe {border: 0px;}
 .jumbotron > * {padding: 10px;}
 
 button {
-    background-color: var(--buttonBg); color: var(--button); outline: none; border: none; margin: 0px; padding: 10px; border-radius: 5px;
-    font-size: 150%; font-family: 'courier new';
+    background-color: var(--buttonBg);
+    color: var(--button);
+    outline: none;
+    border: none;
+    margin: 0px;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 150%;
+    font-family: 'courier new';
 }
+
+.projectCard {width: 100%; background-color: svar(--jumbotronBg); display: block;}
+.projectCard iframe {width: 35%; float: left; margin: auto; background-color: var(--jumbotronBg); height: 100%;}
+.projectCard .projectCardDesc {float: right; width: 65%; background-color: var(--jumbotronBg);}
+.projectCard .projectCardDesc h3 {border-bottom: 0px; padding-left: 50%; background-color: var(--jumbotronBg);}
 /**/
 
 .topNav {
@@ -89,13 +103,13 @@ button {
 }
 .topNav li {background-color: var(--ulTopNavLiBg); float: left; display: block; padding: 10px; line-height: 50px;}
 .topNav li::before {display: none;}
-.topNav li a {color: var(--ulTopNavLiA); padding: 14px; font-size: 175%; display: block; text-decoration: none !important; text-align: center;}
+.topNav li a {color: var(--ulTopNavLiA); padding: 14px; font-size: 25px; display: block; text-decoration: none !important; text-align: center;}
 
 .switch {position: relative; display: inline-block; width: 75px; height: 34px;}
 .switch input {opacity: 0; width: 0px; height: 0px;}
 .slider {position: absolute; cursor: pointer; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: white; border-radius: 34px; transform: translateY(20%);}
 .slider::before {position: absolute; content: ""; height: 26px; width: 26px; left: 4px; bottom: 4px; background-color: black; border-radius: 50%;}
-input:checked + .slider {background-color: black;}
+input:checked + .slider {background-color: rgb(0, 0, 0);}
 input:checked + .slider::before {background-color: white; transform: translateX(40px);}
 
 ul.footer {display: inline-block; width: 100%; border-top: 1px solid var(--ulFooterBorderTop); overflow: hidden;}
