--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /*FORMAT CONTENT*/
 /****************/
 * {box-sizing: border-box; margin: 0px; padding: 0px;}
-body {margin: 0px; padding: 0px; background-color: var(--bodyBg); width: 100%; height: 100%; font-family: 'montserrat';}
+body {margin: 0px; padding: 0px; background-color: var(--bg); width: 100%; height: 100%; font-family: 'montserrat';}
 .pageContent {padding: 15px;}
 
 /**********/
@@ -22,12 +22,12 @@ body {margin: 0px; padding: 0px; background-color: var(--bodyBg); width: 100%; h
 /****************/
 /*STYLE ELEMENTS*/
 /****************/
-p, a, li {font-size: 25px;}
+p, a, u, del, big, small, li {font-size: 25px;}
 p, li {color: var(--content);}
 a {text-decoration: none !important; color: var(--specialContent); font-weight: bold;}
 
 h1, h2, h3, h4, h5, h6 {padding: 10px; margin-bottom: 10px; color: var(--content); border-bottom: 1px solid var(--contentBorder); font-size: 35px;}
-h6{font-size:50%;} h5{font-size:60%;} h4{font-size:70%;} h3{font-size:80%;} h2{font-size:90%;} h1{font-size:100%;}
+h6{font-size:75%;} h5{font-size:80%;} h4{font-size:85%;} h3{font-size:90%;} h2{font-size:95%;} h1{font-size:100%;}
 
 ul {font-size: 50px;}
 ul li {list-style: none;}
@@ -50,7 +50,7 @@ button {
     font-family: 'monospace';
 }
 
-pre {font-family: monospace; background-color: var(--contentBg); color: var(--specialContent);}
+pre, code {font-family: monospace; background-color: var(--contentBg); color: var(--specialContent);}
 
 .projectCard {width: 100%; background-color: var(--contentBg); display: block;}
 .projectCard iframe {width: 35%; float: left; margin: auto; background-color: var(--contentBg); height: 100%;}
