--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 /****************/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-@import url('https://mtm828.github.io/sig.css');
+@import url('https://mtm828.github.io/sig/sig.css');
 
 /****************/
 /*FORMAT CONTENT*/
